fixed name column header text alignment

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ table .ibu{
 	width: 125px;
 }
 
-table .name{
+table td.name{
 	text-align: left;
 }
 table .abv{
